after sending changes